--- a/frontend/mainPage.html
+++ b/frontend/mainPage.html
@@ -5,21 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Users Handling</title>
     <link rel="stylesheet" href="./userStyles.css">
-    <script src="./operations.js"></script>
     <script src="./user.js"></script>
-    
 </head>
 <body>
-    <div class="main_page_container">
-        <h1>Users Details</h1>
-        <h3>Handle Users from here</h3>
-        <div>
-            <a href="./createUser.html"><button>Create User</button></a>
-            <button onclick="searchUser()">Search User</button>
-        </div>
-        <table id="users_details">
-
-        </table>
+    <h1>Users Details</h1>
+    <h3>Handle Users from here</h3>
+    <div>
+        <button>Search a User</button>
+        <button onclick="">Create New User</button>.
+        <button onclick="updateUser()">Update a User</button>
     </div>
+    <table id="users_details">
+
+    </table>
 </body>
 </html>
