rename mainPage.html into index.html

--- a/frontend/createUser.html
+++ b/frontend/createUser.html
@@ -30,7 +30,7 @@
             <label for="cmobile">Mobile:</label><br>
             <input type="number" id="cmobile" class="inp_box" min="0" placeholder="Enter mobile number"><br><br>
             <input class="btn" type="submit"><br>
-            <a class="go_back" href="./mainPage.html">&lt;Go Back</a>
+            <a class="go_back" href="./createUser.html">&lt;Go Back</a>
         </form>
     </div>
 </body>
