index.js moved to root directory

--- a/frontend/update.html
+++ b/frontend/update.html
@@ -30,7 +30,7 @@
             <label for="mymobile">Mobile:</label><br>
             <input type="number" id="mymobile" class="inp_box" placeholder="Enter mobile"><br><br>
             <input class="btn" type="submit"><br>
-            <a class="go_back" href="./index.html">&lt;Go Back</a>
+            <a class="go_back" href="../index.html">&lt;Go Back</a>
         </form>
     </div>
 </body>
