--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Users Handling</title>
-    <link rel="stylesheet" href="./userStyles.css">
-    <script src="./operations.js"></script>
-    <script src="./user.js"></script>
+    <link rel="stylesheet" href="./frontend/userStyles.css">
+    <script src="./frontend/operations.js"></script>
+    <script src="./frontend/user.js"></script>
     
 </head>
 <body>
@@ -14,7 +14,7 @@
         <h1>Users Details</h1>
         <h3>Handle Users from here</h3>
         <div>
-            <a href="./createUser.html"><button>Create User</button></a>
+            <a href="./frontend/createUser.html"><button>Create User</button></a>
             <button onclick="searchUser()">Search User</button>
         </div>
         <table id="users_details">
